tests/neg/semantic_unknown_struct_member.baa
// EXPECT: عضو هيكل غير معرّف

هيكل نقطة {
    صحيح س.
}

صحيح الرئيسية() {
    هيكل نقطة ن.
    ن:ص = ١.
    إرجع ٠.
}
